cotrip-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cotrip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cotrip
  template:
    metadata:
      labels:
        app: cotrip
    spec:
      containers:
      - name: cotrip
        image: registry.cn-hangzhou.aliyuncs.com/leansd/cotrip:latest
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: aliyun-registry-key
