auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      imagePullSecrets:
      - name: aliyun-registry-key
      containers:
      - name: auth
        image: registry.cn-hangzhou.aliyuncs.com/leansd/auth:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8848
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 8848
      targetPort: 8848
