cotrip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cotrip
spec:
  selector:
    app: cotrip
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
