keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:22.0.1
        args: ["start-dev"]
        ports:
        - containerPort: 8080
        ports:
          - name: http
            containerPort: 8080

        volumeMounts:
        - name: keycloak-data
          mountPath: /opt/keycloak/data
        volumeMounts:
        - name: keycloak-config
          mountPath: "/config"
          readOnly: true
      volumes:
      - name: keycloak-data
        persistentVolumeClaim:
          claimName: keycloak-pvc
      - name: keycloak-log
        persistentVolumeClaim:
          claimName: keycloak-pvc
      - name: keycloak-config
        secret:
          secretName: keycloak-config 
         
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8848
      targetPort: 8080
